# subito-searcher

./: .gitignore  README.md  pyproject.toml
src/: _version.py  cli.py  persistence.py
