[tool.poetry]
name = "subito-searcher"
version = "0.1.0"
description = "simple website scraping bot for Subito.it"
authors = ["LucaSforza <lucasforza1234@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
subitokit = "^0.1.1"
importlib-metadata = "^6.0.0"

[tool.poetry.scripts]
subito-searcher = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
